# pants-sls-distribution

./: README.md  pyproject.toml
plugins/sls-distribution/.claude-plugin/: plugin.json
plugins/sls-distribution/.claude-plugin/skills/sls-distribution/: SKILL.md
plugins/sls-distribution/.claude-plugin/skills/sls-distribution/reference/: goals-reference.md  integration-map.md  targets-reference.md
src/pants_sls_distribution/: __init__.py  _asset_layout.py  _check_script.py  _exceptions.py  _hooks.py  _init_script.py  _launcher_binary.py  _launcher_config.py  _layout.py  _lock_file.py  _types.py  _validation.py  bundled_claude_plugins.py  register.py  subsystem.py  targets.py
src/pants_sls_distribution/goals/: docker.py  lock.py  manifest.py  package.py  publish.py  validate.py
src/pants_sls_distribution/rules/: dependencies.py  docker.py  launcher.py  manifest.py  package.py  publish.py  validation.py
src/pants_sls_distribution/schemas/: manifest.v1.json
src/pants_sls_distribution/subsystems/: launcher.py
tests/: conftest.py
tests/unit/: test_asset_layout.py  test_check_script.py  test_exceptions.py  test_hooks.py  test_init_script.py  test_launcher_binary.py  test_launcher_config.py  test_layout.py  test_lock_file.py  test_types.py  test_validation_logic.py
